--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,2 @@
-MONGO_DB_URI=mongodb+srv://kanaetochiokiyi:zUkmebavI2dj7wUo@cluster0.ebbfb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_URI=mongodb+srv://kanaetochiokiyi:<db_password>@cluster0.ebbfb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 3000
